--- a/WindowsFormsApp8/WindowsFormsApp8.csproj
+++ b/WindowsFormsApp8/WindowsFormsApp8.csproj
@@ -58,6 +58,18 @@
         <Compile Include="Form1.Designer.cs">
             <DependentUpon>Form1.cs</DependentUpon>
         </Compile>
+        <Compile Include="manu.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="manu.Designer.cs">
+          <DependentUpon>manu.cs</DependentUpon>
+        </Compile>
+        <Compile Include="outbound.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="outbound.Designer.cs">
+          <DependentUpon>outbound.cs</DependentUpon>
+        </Compile>
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="stock.cs">
