--- a/WindowsFormsApp8/WindowsFormsApp8.csproj
+++ b/WindowsFormsApp8/WindowsFormsApp8.csproj
@@ -51,6 +51,12 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="create1.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="create1.Designer.cs">
+          <DependentUpon>create1.cs</DependentUpon>
+        </Compile>
         <Compile Include="Database2.cs" />
         <Compile Include="Form1.cs">
             <SubType>Form</SubType>
@@ -90,8 +96,17 @@
         <Compile Include="store_register.Designer.cs">
           <DependentUpon>store_register.cs</DependentUpon>
         </Compile>
+        <EmbeddedResource Include="create1.resx">
+          <DependentUpon>create1.cs</DependentUpon>
+        </EmbeddedResource>
         <EmbeddedResource Include="Form1.resx">
           <DependentUpon>Form1.cs</DependentUpon>
+        </EmbeddedResource>
+        <EmbeddedResource Include="manu.resx">
+          <DependentUpon>manu.cs</DependentUpon>
+        </EmbeddedResource>
+        <EmbeddedResource Include="outbound.resx">
+          <DependentUpon>outbound.cs</DependentUpon>
         </EmbeddedResource>
         <EmbeddedResource Include="Properties\Resources.resx">
             <Generator>ResXFileCodeGenerator</Generator>
