--- a/WindowsFormsApp8/WindowsFormsApp8.csproj
+++ b/WindowsFormsApp8/WindowsFormsApp8.csproj
@@ -64,6 +64,12 @@
         <Compile Include="Form1.Designer.cs">
             <DependentUpon>Form1.cs</DependentUpon>
         </Compile>
+        <Compile Include="login.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="login.Designer.cs">
+          <DependentUpon>login.cs</DependentUpon>
+        </Compile>
         <Compile Include="manu.cs">
           <SubType>Form</SubType>
         </Compile>
@@ -78,6 +84,12 @@
         </Compile>
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="register.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="register.Designer.cs">
+          <DependentUpon>register.cs</DependentUpon>
+        </Compile>
         <Compile Include="stock.cs">
           <SubType>Form</SubType>
         </Compile>
@@ -102,6 +114,9 @@
         <EmbeddedResource Include="Form1.resx">
           <DependentUpon>Form1.cs</DependentUpon>
         </EmbeddedResource>
+        <EmbeddedResource Include="login.resx">
+          <DependentUpon>login.cs</DependentUpon>
+        </EmbeddedResource>
         <EmbeddedResource Include="manu.resx">
           <DependentUpon>manu.cs</DependentUpon>
         </EmbeddedResource>
@@ -117,6 +132,9 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
+        <EmbeddedResource Include="register.resx">
+          <DependentUpon>register.cs</DependentUpon>
+        </EmbeddedResource>
         <EmbeddedResource Include="stock.resx">
           <DependentUpon>stock.cs</DependentUpon>
         </EmbeddedResource>
