--- a/WindowsFormsApp8/WindowsFormsApp8.csproj
+++ b/WindowsFormsApp8/WindowsFormsApp8.csproj
@@ -167,5 +167,8 @@
     <ItemGroup>
         <None Include="App.config" />
     </ItemGroup>
+    <ItemGroup>
+      <Content Include="db\c#_store.sql" />
+    </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
