--- a/WindowsFormsApp8/WindowsFormsApp8.csproj
+++ b/WindowsFormsApp8/WindowsFormsApp8.csproj
@@ -76,6 +76,12 @@
         <Compile Include="login.Designer.cs">
           <DependentUpon>login.cs</DependentUpon>
         </Compile>
+        <Compile Include="login_sql.cs">
+          <SubType>Form</SubType>
+        </Compile>
+        <Compile Include="login_sql.Designer.cs">
+          <DependentUpon>login_sql.cs</DependentUpon>
+        </Compile>
         <Compile Include="manu.cs">
           <SubType>Form</SubType>
         </Compile>
@@ -131,6 +137,9 @@
         </EmbeddedResource>
         <EmbeddedResource Include="login.resx">
           <DependentUpon>login.cs</DependentUpon>
+        </EmbeddedResource>
+        <EmbeddedResource Include="login_sql.resx">
+          <DependentUpon>login_sql.cs</DependentUpon>
         </EmbeddedResource>
         <EmbeddedResource Include="manu.resx">
           <DependentUpon>manu.cs</DependentUpon>
